[package]
name = "dorcs"
description = "Dorcs is a static site generator"
version = "0.3.0"
edition = "2021"
authors = ["Patrick Arndt <patrick.arndt.99@web.de>"]
build = "build.rs"


[[bin]]
name = "dorcs"         # Name of the binary
path = "./src/main.rs" # Path to the source file


[dependencies]
markdown = "=1.0.0-alpha.16"
regex = "1.10.3"
rust-embed = "8.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
